# mup

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  cliff.toml
.github/workflows/: ci.yml  release.yml
benches/: render.rs
examples/: actix.rs  axum.rs  basic.rs  components.rs  htmx_fragments.rs  rocket.rs
mup-macros/: Cargo.toml
mup-macros/src/: component.rs  cursor.rs  lib.rs  markup.rs  mup_path.rs
src/: attrs.rs  html.rs  lib.rs  macros.rs  markup.rs  render.rs  template.rs  tests.rs
