[package]
name = "mup"
version = "0.3.0"
edition = "2024"
description = "A small Rust HTML DSL for type-checked server-rendered markup."
license = "MIT"
repository = "https://github.com/ensiouel/mup"
readme = "README.md"
keywords = ["html", "markup", "template", "dsl"]
categories = ["template-engine", "web-programming"]

[dependencies]
