[package]
name = "mup"
version = "0.8.0"
edition = "2024"
description = "A small Rust HTML DSL for type-checked server-rendered markup."
license = "MIT"
repository = "https://github.com/ensiouel/mup"
readme = "README.md"
keywords = ["html", "markup", "template", "dsl"]
categories = ["template-engine", "web-programming"]

[features]
axum = ["dep:axum"]
actix-web = ["dep:actix-web"]
rocket = ["dep:rocket"]

[dependencies]
axum = { version = "0.8", optional = true }
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "actix"
required-features = ["actix-web"]

[[example]]
name = "rocket"
required-features = ["rocket"]
